fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -41,7 +41,7 @@ ul li {
 .button {
     display: flex;
     justify-content: center;
-    margin: 15px auto;
+    margin: auto;
     position: relative;
 }
 
